[gd_scene load_steps=21 format=3 uid="uid://d260x5oyxxqqd"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_ckeqh"]
[ext_resource type="PackedScene" uid="uid://ce8n60qf5ktyn" path="res://scenes/objects/gate.tscn" id="2_iikwq"]
[ext_resource type="Texture2D" uid="uid://bsev83ut1c0qi" path="res://graphics/ground/stones.png" id="2_p05bn"]
[ext_resource type="Texture2D" uid="uid://d26lhnsaqyemi" path="res://graphics/decals/dirt_patch.png" id="3_yg0o7"]
[ext_resource type="Texture2D" uid="uid://c5j2ktqki6e5e" path="res://graphics/decals/moss/moss_1.png" id="4_hk5cc"]
[ext_resource type="Texture2D" uid="uid://4cx6qvobf7qt" path="res://graphics/decals/moss/moss_2.png" id="5_4hkud"]
[ext_resource type="PackedScene" uid="uid://c4887y6unr36" path="res://scenes/player/player.tscn" id="6_bhcrp"]
[ext_resource type="Texture2D" uid="uid://cvdfysw7loe2f" path="res://graphics/decals/moss/moss_3.png" id="6_l63fm"]
[ext_resource type="Texture2D" uid="uid://f820v141aqoo" path="res://graphics/decals/moss/moss_4.png" id="7_8xpaq"]
[ext_resource type="Texture2D" uid="uid://dut5fntioc0s8" path="res://graphics/decals/moss/moss_5.png" id="8_08xkl"]
[ext_resource type="Texture2D" uid="uid://cfgb3qdajsik7" path="res://graphics/tilesets/outside_walls.png" id="9_cvqy3"]
[ext_resource type="Texture2D" uid="uid://bv1p4tthnda2l" path="res://graphics/tilesets/soil.png" id="10_3ktnl"]
[ext_resource type="PackedScene" uid="uid://bhmktc0cldarr" path="res://scenes/houses/house.tscn" id="11_31key"]
[ext_resource type="PackedScene" uid="uid://bbxi4iy0q3ggj" path="res://scenes/objects/steam_vent.tscn" id="12_yvqln"]
[ext_resource type="PackedScene" uid="uid://c35552yogal5r" path="res://scenes/objects/light_fan_animation.tscn" id="13_7bua3"]
[ext_resource type="Texture2D" uid="uid://bshlhe2bfq7r5" path="res://icon.svg" id="15_83rwt"]
[ext_resource type="PackedScene" uid="uid://cijg7wrhq4ibf" path="res://scenes/enemies/drone.tscn" id="17_pfr2s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tmt15"]
resource_name = "walls"
texture = ExtResource("9_cvqy3")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dcdoi"]
resource_name = "soil"
texture = ExtResource("10_3ktnl")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ynh00"]
tile_size = Vector2i(390, 390)
sources/0 = SubResource("TileSetAtlasSource_tmt15")
sources/1 = SubResource("TileSetAtlasSource_dcdoi")

[node name="Level" type="Node2D"]
script = ExtResource("1_ckeqh")

[node name="Ground" type="Node2D" parent="."]

[node name="GroundSprite" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(643, 198)
texture = ExtResource("2_p05bn")
region_enabled = true
region_rect = Rect2(-5422.7, -3068.13, 16000, 10000)

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(0.737255, 0.74902, 0.698039, 1)
position = Vector2(-72, 467)
texture = ExtResource("3_yg0o7")

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_ynh00")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-196602, 1, 1, -131066, 1, 1, -65530, 1, 1, 6, 1, 2, 7, 65537, 2, 8, 65537, 2, 9, 65537, 2, 10, 65537, 2, 11, 65537, 1, 65547, 1, 1, 131083, 1, 1, 196619, 1, 1, 262155, 1, 1, 327691, 1, 1, 393227, 1, 1, -262137, 65537, 1, -196601, 65537, 1, -131065, 65537, 1, -65529, 65537, 1, -262136, 65537, 1, -196600, 65537, 1, -131064, 65537, 1, -65528, 65537, 1, -262135, 65537, 1, -196599, 65537, 1, -131063, 65537, 1, -65527, 65537, 1, -262134, 65537, 1, -196598, 65537, 1, -131062, 65537, 1, -65526, 65537, 1, -262133, 65537, 1, -196597, 65537, 1, -131061, 65537, 1, -65525, 65537, 1, -262132, 65537, 1, -196596, 65537, 1, -131060, 65537, 1, -65524, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, 393228, 65537, 1, -262131, 65537, 1, -196595, 65537, 1, -131059, 65537, 1, -65523, 65537, 1, 13, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, 327693, 65537, 1, 393229, 65537, 1, -262130, 65537, 1, -196594, 65537, 1, -131058, 65537, 1, -65522, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 327694, 65537, 1, 393230, 65537, 1, -262129, 65537, 1, -196593, 65537, 1, -131057, 65537, 1, -65521, 65537, 1, 15, 65537, 1, 65551, 65537, 1, 131087, 65537, 1, 196623, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, -262138, 1, 1)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array(-4, 131072, 0, -5, 65536, 0, -6, 65536, 0, -262138, 0, 1, 11, 131072, 1, 393227, 65536, 2, 65547, 0, 2, 131083, 0, 2, 196619, 0, 2, 262155, 0, 2, 327691, 0, 2, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, -196602, 0, 2, -131066, 0, 2, -65530, 0, 2, 6, 65536, 2, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0)

[node name="Moss1" type="Sprite2D" parent="Ground"]
position = Vector2(2146, 926)
texture = ExtResource("4_hk5cc")

[node name="Moss2" type="Sprite2D" parent="Ground"]
position = Vector2(1891, 443)
texture = ExtResource("5_4hkud")

[node name="Moss3" type="Sprite2D" parent="Ground"]
position = Vector2(1651, 803)
texture = ExtResource("6_l63fm")

[node name="Moss4" type="Sprite2D" parent="Ground"]
position = Vector2(4258, 404)
texture = ExtResource("7_8xpaq")

[node name="Moss5" type="Sprite2D" parent="Ground"]
position = Vector2(2327, 584)
texture = ExtResource("8_08xkl")

[node name="House" parent="Ground" instance=ExtResource("11_31key")]
position = Vector2(4.00006, 2918)
rotation = -3.10494

[node name="SteamVent" parent="Ground" instance=ExtResource("12_yvqln")]
position = Vector2(-926, 400)

[node name="LightFanAnimation" parent="Ground" instance=ExtResource("13_7bua3")]
position = Vector2(-1319, 2125)
autoplay = "default"
frame_progress = 0.73878

[node name="Gate" parent="." instance=ExtResource("2_iikwq")]
position = Vector2(667, -481)

[node name="Player" parent="." instance=ExtResource("6_bhcrp")]
position = Vector2(278, 379)

[node name="Projectiles" type="Node2D" parent="."]

[node name="Thing" type="Thing" parent="."]
position = Vector2(-422, 457)
texture = ExtResource("15_83rwt")

[node name="Drone" parent="." instance=ExtResource("17_pfr2s")]
position = Vector2(945, 461)

[connection signal="body_entered" from="Ground/House" to="." method="_on_house_body_entered"]
[connection signal="body_exited" from="Ground/House" to="." method="_on_house_body_exited"]
[connection signal="player_entered" from="Gate" to="." method="_on_gate_player_entered"]
[connection signal="player_exited" from="Gate" to="." method="_on_gate_player_exited"]
[connection signal="grenade_shot" from="Player" to="." method="_on_player_grenade_shot"]
[connection signal="laser_shot" from="Player" to="." method="_on_player_laser_shot"]
